--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 <td colspan="3">
                 Session 1 – Graduate Student Consortium<br>
                 Session Chair: Sunyang Fu <br>
-                Faculty Mentors: Hua Xu, Chunhua Weng, Ramakanth Kavuluru, and Timothy Miller<br><br>
+                Faculty Mentors: Hua Xu, Suzanne Tamang, Ramakanth Kavuluru, and Timothy Miller<br><br>
                 <span class="avatars">
                     <!-- <span class="avatar-item">
                         <img class="avatar" src="src/sunyang2.jpg" alt="Sunyang Fu">
@@ -1088,8 +1088,8 @@ technologies, especially in health systems (and adjunct industries).</p>
                         <span class="avatar-caption">Hua Xu<br><small>Professor and Vice Chair for<br>Research and Development, Assistant<br>Dean for Biomedical Informatics,<br>Yale School of Medicine</small></span>
                     </span>
                     <span class="avatar-item">
-                        <img class="avatar" src="src/chunhuaweng.png" alt="Chunhua Weng">
-                        <span class="avatar-caption">Chunhua Weng<br><small>Professor of Biomedical Informatics<br>Columbia University</small></span>
+                        <img class="avatar" src="src/suzannetamang.jpg" alt="Suzanne Tamang">
+                        <span class="avatar-caption">Suzanne Tamang<br><small>Assistant Professor in the<br>Department of Medicine, Division of<br>Immunology and Rheumatology,<br>Faculty Fellow at the Stanford Center<br>for Population Health Sciences</small></span>
                     </span>
                     <span class="avatar-item">
                         <img class="avatar" src="src/RamakanthKavuluru_2.png" alt="Ramakanth Kavuluru">
@@ -1221,14 +1221,14 @@ technologies, especially in health systems (and adjunct industries).</p>
                 </td>
             </tr>
             <tr class="session-header">
-                <td colspan="3">Session 3 – Generative AI in Health Systems<br>Session Moderator: Rui Zhang<br><span class="avatars"><!-- Add images like: <img class='avatar' src='src/people/chair3.jpg' alt='Chair Name'> --></span></td>
+                <td colspan="3">Session 3 – Generative AI in Health Systems<br>Session Moderator: Rui Zhang<br><br><strong>Time: 11:20 - 11:50 am</strong><span class="avatars"><!-- Add images like: <img class='avatar' src='src/people/chair3.jpg' alt='Chair Name'> --></span></td>
             </tr>
             <tr>
                 <td colspan="3" style="text-align:center; border-right: none; background-color: white;">
                     <span style="display:inline-flex; justify-content:center; align-items:flex-start; gap:16px; flex-wrap:wrap; margin-top:8px;">
                         <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
-                            <img src="src/Wendy Chapman.png" alt="Wendy Chapman" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
-                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Wendy Chapman<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Associate Dean of Health Informatics<br>Chief Learning Health Officer for<br>UT Southwestern Health System</small></span>
+                            <img src="src/adamwright.jpg" alt="Adam Wright" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
+                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Adam Wright<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Professor of Biomedical Informatics and Medicine<br>at Vanderbilt University Medical Center<br>and serves as the director of the<br>Vanderbilt Clinical Informatics Center (VCLIC)</small></span>
                         </span>
                         <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
                             <img src="src/Hongfang Liu_2.png" alt="Hongfang Liu" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
@@ -1244,6 +1244,10 @@ technologies, especially in health systems (and adjunct industries).</p>
                         </span>
                     </span>
                 </td>
+            </tr>
+            <tr class="break-row">
+                <td>11:50 - 12:00</td>
+                <td colspan="2">Closing</td>
             </tr>
         </table>
     </section>
