--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                     </span> -->
                     <span class="avatar-item">
                         <img class="avatar" src="src/xuhua.png" alt="Hua Xu">
-                        <span class="avatar-caption">Hua Xu<br><small>Professor and Vice Chair for<br>Research and Development, Assistant<br>Dean for Biomedical Informatics,<br>Yale School of Medicine</small></span>
+                        <span class="avatar-caption">Hua Xu<br><small>Professor and Vice Chair <br>for Research and Development,<br>Assistant Dean for Biomedical Informatics,<br>Yale School of Medicine</small></span>
                     </span>
                     <span class="avatar-item">
                         <img class="avatar" src="src/suzannetamang.jpg" alt="Suzanne Tamang">
@@ -1093,11 +1093,11 @@ technologies, especially in health systems (and adjunct industries).</p>
                     </span>
                     <span class="avatar-item">
                         <img class="avatar" src="src/RamakanthKavuluru_2.png" alt="Ramakanth Kavuluru">
-                        <span class="avatar-caption">Ramakanth Kavuluru<br><small>Professor of Internal Medicine<br>University of Kentucky</small></span>
+                        <span class="avatar-caption">Ramakanth Kavuluru<br><small>Professor of Internal Medicine,<br>University of Kentucky</small></span>
                     </span>
                     <span class="avatar-item">
                         <img class="avatar" src="src/TimothyMiller_2.png" alt="Timothy Miller">
-                        <span class="avatar-caption">Timothy Miller<br><small>Associate Professor of Pediatrics<br>Harvard Medical School</small></span>
+                        <span class="avatar-caption">Timothy Miller<br><small>Associate Professor of Pediatrics,<br>Harvard Medical School</small></span>
                     </span>
                 </span>
                 </td>
@@ -1228,19 +1228,19 @@ technologies, especially in health systems (and adjunct industries).</p>
                     <span style="display:inline-flex; justify-content:center; align-items:flex-start; gap:16px; flex-wrap:wrap; margin-top:8px;">
                         <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
                             <img src="src/adamwright.jpg" alt="Adam Wright" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
-                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Adam Wright<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Professor of Biomedical Informatics and Medicine<br>at Vanderbilt University Medical Center<br>and serves as the director of the<br>Vanderbilt Clinical Informatics Center (VCLIC)</small></span>
+                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Adam Wright<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Professor of Biomedical Informatics and<br>Medicine at Vanderbilt University Medical<br>Center, Director of the Vanderbilt<br>Clinical Informatics Center (VCLIC)</small></span>
                         </span>
                         <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
                             <img src="src/Hongfang Liu_2.png" alt="Hongfang Liu" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
-                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Hongfang Liu<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Professor at McWilliams School of Biomedical<br>Informatics and serves as Vice President<br>of Learning Health System<br>UTHealth Houston</small></span>
+                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Hongfang Liu<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Professor at McWilliams School of<br>Biomedical Informatics, Vice President<br>of Learning Health System<br>UTHealth Houston</small></span>
                         </span>
                         <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
                             <img src="src/Yiye Zhang.png" alt="Yiye Zhang" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
-                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Yiye Zhang<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Associate Professor of health informatics at<br>Weill Cornell Medicine, Informatics Director<br>of Clinical Decision Support at<br>NewYork-Presbyterian Hospital,<br>editor-in-chief, npj Health Systems</small></span>
+                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Yiye Zhang<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Associate Professor of health informatics<br>at Weill Cornell Medicine, Informatics<br>Director of Clinical Decision Support at<br>NewYork-Presbyterian Hospital,<br>editor-in-chief, npj Health Systems</small></span>
                         </span>
                         <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
                             <img src="src/yonghuiwu_2.png" alt="Nan Liu" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
-                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Yonghui Wu<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Chief Data Scientist & Associate Professor<br>Department of Health Outcomes<br>& Biomedical Informatics<br>College of Medicine at University of Florida</small></span>
+                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Yonghui Wu<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Chief Data Scientist & Associate Professor,<br>Department of Health Outcomes<br>& Biomedical Informatics College of<br>Medicine at University of Florida</small></span>
                         </span>
                     </span>
                 </td>
