--- a/index.html
+++ b/index.html
@@ -1242,6 +1242,10 @@ technologies, especially in health systems (and adjunct industries).</p>
                             <img src="src/yonghuiwu_2.png" alt="Nan Liu" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
                             <span style="margin-top:6px; font-size:15px; line-height:1.4;">Yonghui Wu<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Chief Data Scientist & Associate Professor,<br>Department of Health Outcomes<br>& Biomedical Informatics College of<br>Medicine at University of Florida</small></span>
                         </span>
+                        <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
+                            <img src="src/suzannetamang.jpg" alt="Suzanne Tamang" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
+                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Suzanne Tamang<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Assistant Professor in the<br>Department of Medicine, Division of<br>Immunology and Rheumatology,<br>Faculty Fellow at the Stanford Center<br>for Population Health Sciences</small></span>
+                        </span>
                     </span>
                 </td>
             </tr>
