--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,7 @@ technologies, especially in health systems (and adjunct industries).</p>
             <tr class="session-header">    
                 <td colspan="3">
                 Session 1 – Graduate Student Consortium<br>
-                Session Chair: Sunyang Fu <br>
+                Session Chair: Sunyang Fu, Yonghui Wu <br>
                 Faculty Mentors: Hua Xu, Suzanne Tamang, Ramakanth Kavuluru, and Timothy Miller<br><br>
                 <span class="avatars">
                     <!-- <span class="avatar-item">
@@ -1164,7 +1164,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 <td colspan="2">Coffee Break</td>
             </tr>
             <tr class="session-header">
-                <td colspan="3">Session 2 – State-of-the-art Biomedical and Clinical NLP<br>Session Chair: TBD <br><span class="avatars"><!-- Add images like: <img class='avatar' src='src/people/chair2.jpg' alt='Chair Name'> --></span></td>
+                <td colspan="3">Session 2 – State-of-the-art Biomedical and Clinical NLP<br>Session Chair: Xinsong Du, Jiyeong Kim <br><span class="avatars"><!-- Add images like: <img class='avatar' src='src/people/chair2.jpg' alt='Chair Name'> --></span></td>
             </tr>
             <tr>
                 <td>10:20 – 10:30 am</td>
@@ -1221,7 +1221,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 </td>
             </tr>
             <tr class="session-header">
-                <td colspan="3">Session 3 – Generative AI in Health Systems<br>Session Moderator: Rui Zhang<br><br><strong>Time: 11:20 - 11:50 am</strong><span class="avatars"><!-- Add images like: <img class='avatar' src='src/people/chair3.jpg' alt='Chair Name'> --></span></td>
+                <td colspan="3">Session 3 – Generative AI in Health Systems<br>Session Chair: Rui Zhang<br><br><strong>Time: 11:20 - 11:50 am</strong><span class="avatars"><!-- Add images like: <img class='avatar' src='src/people/chair3.jpg' alt='Chair Name'> --></span></td>
             </tr>
             <tr>
                 <td colspan="3" style="text-align:center; border-right: none; background-color: white;">
